# Vulkan_cmake_template

./: README.md
Vulkan_template/: CMakeLists.txt
Vulkan_template/.shader/: chap14_basic.frag  chap14_basic.vert  chap14_compile.bat
Vulkan_template/.shader/chap14/: vert.spv
Vulkan_template/Tools/include/: func.h  stdVkTemplate.h
Vulkan_template/Tools/source/: func.cpp  stdVkTemplate.cpp
Vulkan_template/src/: test.cpp  test01.cpp
